# test_openai

./: .gitignore  README.md  pyproject.toml
ui/: main.py  test_main.py
ui/static/: docManager.js  fileUploadHandler.js  login.css  script.js  textareaHandler.js  toggleButton.js  utils.js
ui/static/styles/: chat-history-area.css  doc-listing.css  input-area.css  overview.css  style.css
ui/templates/: base.html  login.html
ui/templates/components/: form.html  sidebar.html
